<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wiggit Scanner</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scan">Scan a Book</string>
    <string name="manual">Enter Book</string>
    <string name="enter">Lookup ISBN</string>
    <string name="goback">Go Back</string>
    <string name="pre">Preview</string>
    <string name="link">Web</string>
    <string name="save">Save</string>
    <string name="thumb">Book thumbnail</string>
    <string name="coverpage">Book coverpage</string>

</resources>
