<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" android:id="@+id/backgroundLinearLayout">

<ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#ffffffff" >

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

        <Button
                android:id="@+id/scan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="#ff333333"
                android:padding="10dp"
                android:text="@string/scan"
                android:textColor="#ffcccccc"
            android:layout_alignParentLeft="true" />

        <Button
            android:id="@+id/manual_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ff333333"
            android:padding="10dp"
            android:text="@string/manual"
            android:textColor="#ffcccccc"
            android:layout_above="@+id/linearLayout"
            android:layout_toRightOf="@+id/scan_button" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/scan_button"
                android:orientation="vertical"
            android:id="@+id/linearLayout">

            <TextView
                    android:id="@+id/book_identifier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff000000"
                    android:textIsSelectable="true"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/book_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff000000"
                    android:textIsSelectable="true"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/book_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff592d94"
                    android:textIsSelectable="true" />

            <TextView
                    android:id="@+id/book_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffa13143"
                    android:textIsSelectable="true" />

            <ImageView
                    android:id="@+id/thumb"
                    android:layout_width="50dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/thumb" />

            <TextView
                    android:id="@+id/book_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff592d94"
                    android:textIsSelectable="true" />

            <TextView
                    android:id="@+id/book_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff000000"
                    android:textIsSelectable="true" />

            <LinearLayout
                    android:id="@+id/star_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                <TextView
                        android:id="@+id/book_rating_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ff2d6994"
                        android:textIsSelectable="true"
                        android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                <Button
                        android:id="@+id/save_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save" />

            </LinearLayout>
        </LinearLayout>

        <Button
                android:id="@+id/preview_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pre"
            android:layout_above="@+id/linearLayout"
            android:layout_toRightOf="@+id/manual_button"
            android:layout_toEndOf="@+id/manual_button" />

        <Button
                android:id="@+id/link_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link"
            android:layout_above="@+id/linearLayout"
            android:layout_alignRight="@+id/linearLayout"
            android:layout_alignEnd="@+id/linearLayout" />
    </RelativeLayout>

</ScrollView>
</LinearLayout>